docker/kubernetes/celery-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: celery-deployment
  labels:
    app: cwt
    component: celery
    group: core
    environment: production
spec:
  replicas: 4
  selector:
    matchLabels:
      component: celery
  template:
    metadata:
      labels:
        component: celery
    spec:
      containers:
      - name: celery
        image: jasonb87/cwt_celery:2.0.2
        args: ["-l", "info", "-c", "1", "--max-memory-per-child", "204800"]
        resources:
          limits:
            cpu: "1"
            memory: "200Mi"
          requests:
            cpu: "0.25"
            memory: "100Mi"
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
        - mountPath: /data/public
          name: public-volume
        - mountPath: /data/cache
          name: cache-volume
      volumes:
      - name: config-volume
        configMap:
          name: django-config
      - name: public-volume
        hostPath:
          path: /opt/nfs/cwt/data/public
          type: DirectoryOrCreate
      - name: cache-volume
        hostPath:
          path: /opt/nfs/cwt/data/cache
          type: DirectoryOrCreate
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: celery-deployment
  labels:
    app: cwt
    component: celery
    group: core
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery
  template:
    metadata:
      labels:
        component: celery
    spec:
      containers:
      - name: celery
        image: jasonb87/cwt_celery:2.0.2
        args: ["-l", "info", "-c", "1", "--max-memory-per-child", "204800"]
        resources:
          limits:
            cpu: "1"
            memory: "200Mi"
          requests:
            cpu: "0.25"
            memory: "100Mi"
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
        - mountPath: /data/public
          name: public-volume
        - mountPath: /data/cache
          name: cache-volume
      volumes:
      - name: config-volume
        configMap:
          name: django-config
      - name: public-volume
        hostPath:
          path: /opt/nfs/cwt/data/public
          type: DirectoryOrCreate
      - name: cache-volume
        hostPath:
          path: /opt/nfs/cwt/data/cache
          type: DirectoryOrCreate
