docker/kubernetes/celery_beat-deployment.yaml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: celery-beat-deployment
  labels:
    app: cwt
    component: celery-beat
    group: core
    environment: production
spec:
  selector:
    matchLabels:
      component: celery-beat
  template:
    metadata:
      labels:
        component: celery-beat
    spec:
      containers:
      - name: celery-beat
        image: jasonb87/cwt_celery:2.0.0
        args: ["-l", "info", "-B"]
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
        - mountPath: /data/public
          name: public-volume
        - mountPath: /data/cache
          name: cache-volume
      volumes:
      - name: config-volume
        configMap:
          name: django-config
      - name: public-volume
        hostPath:
          path: /opt/nfs/cwt/data/public
          type: DirectoryOrCreate
      - name: cache-volume
        hostPath:
          path: /opt/nfs/cwt/data/cache
          type: DirectoryOrCreate
