docker/kubernetes/edas-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: edas-deployment
  labels:
    app: edas
    component: edas
    group: edas
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      component: edas
  template:
    metadata:
      labels:
        component: edas
    spec:
      containers:
      - name: edas
        image: jasonb87/cwt_edas:latest
        resources:
          limits:
            cpu: "2"
            memory: "400Mi"
          requests:
            cpu: "1"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: edas
spec:
  selector:
    app: edas
  ports:
  - name: listen
    protocol: TCP
    port: 5670
  - name: send
    protocol: TCP
    port: 5671
