docker/kubernetes/edas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edas
spec:
  selector:
    app: wps
  ports:
  - name: listen
    protocol: TCP
    port: 5670
  - name: send
    protocol: TCP
    port: 5671
