docker/kubernetes/postgres-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: cwt
    component: postgres
    group: core
    environment: production
spec:
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:9.6.2
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-volume
      volumes:
      - name: db-volume
        hostPath:
          path: /opt/nfs/cwt/db
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: cwt
    component: postgres
    group: core
    environment: production
spec:
  selector:
    app: wps
    component: postgres
  ports:
  - protocol: TCP
    port: 5432
