docker/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: wps
  ports:
  - protocol: TCP
    port: 5432
