docker/kubernetes/redis-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: cwt
    component: redis
    group: core
    environment: production
spec:
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
      - name: redis
        image: redis:3.2.8
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: cwt
    component: redis
    group: core
    environment: production
spec:
  selector:
    component: redis
  ports:
  - protocol: TCP
    port: 6379
