docker/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: wps
  ports:
  - protocol: TCP
    port: 6379
