docker/kubernetes/thredds-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thredds
spec:
  selector:
    app: wps
  ports:
  - protocol:
    port: 8080
  type: NodePort
