docker/kubernetes/wps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wps
spec:
  selector:
    app: wps
  ports:
  - protocol: TCP
    port: 8000
  type: NodePort
