docker/kubernetes/cog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cog-deployment
  labels:
    app: cog
    component: cog
    group: core
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cog
  template:
    metadata:
      labels:
        component: cog
    spec:
      containers:
      - name: cog
        image: jasonb87/cwt_cog:latest
        resources:
          limits:
            cpu: "1"
            memory: "200Mi"
          requests:
            cpu: "0.25"
            memory: "100Mi"
        args: ["aims2.llnl.gov,esgf-compute.llnl.gov", "false", "true", "https://aims2.llnl.gov/wps/home/configure", "true"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /usr/local/cog/cog_install/static
          name: static-volume
      volumes:
      - name: static-volume
        hostPath:
          path: /opt/nfs/cwt/data/static
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: cog
  labels:
    app: cog
    component: cog
    group: core
    environment: development
spec:
  selector:
    component: cog
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cog-ingress
  labels:
    app: cog
    component: cog
    group: core
    environment: development
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/force-hsts: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend: 
          serviceName: cog
          servicePort: 8000
