docker/kubernetes/nginx-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: cwt
    component: nginx
    group: core
    environment: production
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.13.8
        resources:
          limits:
            cpu: "1"
            memory: "400Mi"
          requests:
            cpu: "0.25"
            memory: "200Mi"
        volumeMounts:
        - mountPath: /usr/share/nginx/html/static
          name: static-volume
      volumes:
      - name: static-volume
        hostPath:
          path: /opt/nfs/cwt/data/static
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: cwt
    component: nginx
    group: core
    environment: production
    environment: development
spec:
  selector:
    component: nginx
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  labels:
    app: cwt
    component: nginx
    group: core
    environment: production
    environment: development
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /static
            backend:
              serviceName: nginx
              servicePort: 80
