docker/kubernetes/wps-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: wps-deployment
  labels:
    app: cwt
    component: wps
    group: core
    environment: development-production
spec:
  replicas: 1
  selector:
    matchLabels:
      component: wps
  template:
    metadata:
      labels:
        component: wps
    spec:
      containers:
      - name: wps
        image: jasonb87/cwt_wps:2.0.0
        resources:
          limits:
            cpu: "1"
            memory: "200Mi"
          requests:
            cpu: "0.25"
            memory: "100Mi"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        - name: static-volume
          mountPath: /var/www/static
      volumes:
        - name: config-volume
          configMap:
            name: django-config
        - name: static-volume
          hostPath:
            path: /opt/nfs/cwt/data/static
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: wps
  labels:
    app: cwt
    component: wps
    group: core
    environment: development-production
spec:
  selector:
    component: wps
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wps
  labels:
    app: cwt
    component: wps
    group: core
    environment: development-production
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/force-hsts: "true"
spec:
  rules:
  - http:
      paths:
      - path: /auth
        backend:
          serviceName: wps
          servicePort: 8000
      - path: /wps
        backend:
          serviceName: wps
          servicePort: 8000
